update web app hover effects

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <li>
     				<img src="resource/images/markdown-preview.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur green full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>Markdown Preview</h2>
     						<p>Markdown-preview app built with React and utilizes Bootstrap for responsiveness. The apps live previewer updates as you type.</p>
@@ -159,7 +159,7 @@
           <li>
     				<img src="resource/images/random-quote-machine.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur yellow full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>Random Quote Machine</h2>
     						<p>A project built using fetch API and Twitter Web Intents to tweet dynamically loaded quotes.</p>
@@ -171,7 +171,7 @@
           <li>
     				<img src="resource/images/calmech.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur red full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>calmech development</h2>
     						<p>Fictional construction website. Project was built to practice applying my css knowledge.</p>
@@ -183,7 +183,7 @@
           <li>
     				<img src="resource/images/calculator.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur gray full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>calculator</h2>
     						<p>The project was built using JavaScript. What can I say? it's a calculator :)</p>
@@ -195,7 +195,7 @@
           <li>
     				<img src="resource/images/pomodoro.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur black full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>pomodoro clock</h2>
     						<p>Use my fully functional Pomodoro clock to increase your focus and workflow!</p>
@@ -207,7 +207,7 @@
           <li>
     				<img src="resource/images/wiki-viewer.png" alt="">
     				<div class="caption full-height-width">
-    					<div class="blur full-height-width"></div>
+    					<div class="blur brown full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>wikipedia viewer</h2>
     						<p>Using the Wikipedia API, this app will display user-provided search queries.</p>
