remove project from app list

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     				</div>
     			</li>
         </a>
-        <a href="https://andrewchar.github.io/random-quote-machine/" target="_blank">
+        <!-- <a href="https://andrewchar.github.io/random-quote-machine/" target="_blank">
           <li>
     				<img src="resource/images/random-quote-machine.png" alt="">
     				<div class="caption full-height-width">
@@ -166,7 +166,7 @@
     					</div>
     				</div>
     			</li>
-        </a>
+        </a> -->
         <a href="http://andrewchar.github.io/construction/" target="_blank">
           <li>
     				<img src="resource/images/calmech.png" alt="">
