add react weather app

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
       <h2>web apps</h2>
       <p class="sub-head mb-75">Personal projects that I've done</p>
       <ul class="web-apps__showcase">
+        <a href="https://react-weather-app-18276.firebaseapp.com/" target="_blank">
+          <li>
+    				<img src="resource/images/react-weather-app.jpg" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur blue full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>Weather Forecast</h2>
+    						<p>React app that was bootstrapped using Create React App. Includes bootstrap for basic styling and utilizes Google Maps API.</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
         <a href="https://andrewchar.github.io/markdown-preview/" target="_blank">
           <li>
     				<img src="resource/images/markdown-preview.png" alt="">
