add react-news-app project

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
       <h2>web apps</h2>
       <p class="sub-head mb-75">Personal projects that I've done</p>
       <ul class="web-apps__showcase">
+        <a href="https://andrewchar.github.io/react-news-api/" target="_blank">
+          <li>
+    				<img src="resource/images/react-news-app.jpg" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur dark-blue full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>News Aggregator</h2>
+    						<p>Using a News API to gather stories from different news sources and list them in an easy to navigate fashion</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
         <a href="https://react-weather-app-18276.firebaseapp.com/" target="_blank">
           <li>
     				<img src="resource/images/react-weather-app.jpg" alt="">
@@ -167,18 +179,6 @@
     				</div>
     			</li>
         </a>
-        <!-- <a href="https://andrewchar.github.io/random-quote-machine/" target="_blank">
-          <li>
-    				<img src="resource/images/random-quote-machine.png" alt="">
-    				<div class="caption full-height-width">
-    					<div class="blur yellow full-height-width"></div>
-    					<div class="caption-text full-height-width">
-    						<h2>Random Quote Machine</h2>
-    						<p>A project built using fetch API and Twitter Web Intents to tweet dynamically loaded quotes.</p>
-    					</div>
-    				</div>
-    			</li>
-        </a> -->
         <a href="http://andrewchar.github.io/construction/" target="_blank">
           <li>
     				<img src="resource/images/calmech.png" alt="">
