update react-news-app description

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     					<div class="blur dark-blue full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>News Aggregator</h2>
-    						<p>Using a News API to gather stories from different news sources and list them in an easy to navigate fashion</p>
+    						<p>Using a News API to gather stories from different news sources and list them in an easy to navigate fashion. React-bootstrap was used for some easy front-end styling and responsiveness</p>
     					</div>
     				</div>
     			</li>
