--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<div class="about-content">
 				<h2>about me</h2>
 				<img src="resource/images/about-me.jpg" alt="andrew charlebois portrait">
-				<p>Hey, I'm Andrew, a carpenter turned web developer. My passion for building and my attention to detail gives me the ability to pay close attention to every pixel to ensure that any interface I develop is stunning, yet functional. I am a front-end developer based in Pembroke, Ontario. I'm self-taught and always growing my skills, learning something new every day.</p>
+				<p>Hey, I'm Andrew, a carpenter turned web developer. My passion for building and my attention to detail gives me the ability to pay close attention to every pixel to ensure that any interface I develop is stunning, yet functional. I am a front-end developer based in Montreal, Quebec. I'm self-taught and always growing my skills, learning something new every day.</p>
 				<h3>what i do</h3>
-				<p>I specialize in Front-End Development (HTML5, CSS3, JavaScript). I am currently learning and building projects with React!</p>
+				<p>I specialize in Front-End Development (HTML5, CSS3, JavaScript). I am currently building projects with React and loving it!</p>
 			</div>
 		</div>
 	</section>
