add react-chat-app to project section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
 				<h2>web apps</h2>
 				<p class="sub-head mb-75">Personal projects that I've done</p>
 				<ul class="web-apps__showcase">
+					<a href="https://andrewchar.github.io/react-chat-app/" target="_blank">
+						<li>
+							<img src="resource/images/react-chat-app.jpg" alt="">
+							<div class="caption full-height-width">
+								<div class="blur purple full-height-width"></div>
+								<div class="caption-text full-height-width">
+									<h2>Slack Clone</h2>
+									<p>Most recent pet project built with React and Chatkit/pusher</p>
+								</div>
+							</div>
+						</li>
+					</a>
 					<a href="https://andrewchar.github.io/react-calculator/" target="_blank">
 						<li>
 							<img src="resource/images/calculator.png" alt="">
