--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				<h2>let's chat!</h2>
 				<p class="sub-head mb-35">Send me an email if you have any questions or would like to chat.</p>
 				<div class="button">
-					<a href="mailto:me@andrewchar88@gmail.com">Send an Email</a>
+					<a href="mailto:andrewchar88@gmail.com">Send an Email</a>
 				</div>
 			</div>
 		</div>
